--- a/HTML/Forgot.html
+++ b/HTML/Forgot.html
@@ -19,13 +19,13 @@
     <title>Forgot Password</title>
   </head>
   <body>
-    <div class="container d-flex mt-5 mb-5 gap-5">
-      <div class="left flex-item w-50">
+    <div class="container d-flex mt-5 mb-5 gap-5 w-100">
+      <div class="left flex-item">
         <div class="image_wrapper">
           <img " src="../Images/forgotpass.jpeg" alt="forgotpass image">
         </div>
       </div>
-      <div class="right flex-item w-50">
+      <div class="right flex-item">
         <div class="logo">
           <img src="../Images/logo.png" alt="logo image" />
         </div>
@@ -46,11 +46,11 @@
         <div class="d-grid gap-2">
           <button class="btn btn-primary" type="button">Send Code</button>
         </div>
-        <p class="sub">Check your registered Email for a verification code.</p>
+        <p class="sub pt-3">Check your registered Email for a verification code.</p>
 
         <div class="mb-3">
           <label for="formGroupExampleInput" class="form-label sub"
-            >verification Code</label
+            >Verification Code*</label
           >
           <input
             type="text"
@@ -60,13 +60,13 @@
         </div>
         <div class="mb-3">
           <label for="formGroupExampleInput" class="form-label sub"
-            >Password</label
+            >Password*</label
           >
           <input type="text" class="form-control" placeholder="Password" />
         </div>
         <div class="mb-3">
           <label for="formGroupExampleInput2" class="form-label sub"
-            >Confirm Password</label
+            >Confirm Password*</label
           >
           <input
             type="text"
