signup page is added

--- a/HTML/LogIn.html
+++ b/HTML/LogIn.html
@@ -89,8 +89,9 @@
 					</form>
 					<p class="text-center my-5">
 						Forgot your Password?
+						
 						<a
-							href="Forgot.html"
+							href="./Forgot.html"
 							class="reset-a ms-1"
 							>Reset Password</a
 						>
