--- a/HTML/SignUp.html
+++ b/HTML/SignUp.html
@@ -1,11 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="../CSS/signup.css" />
+    <title>SignUp</title>
+  </head>
+  <body>
+    <main class="signup">
+      <div class="signup-img">
+        <img src="../images/Frame 46.jpg" alt="frame image" />
+      </div>
+      <div class="form">
+        <div class="get">
+          <img src="../images/Agilyst Logo5 3- new.jpg" alt="Agilyst logo" />
+          <h1>Get Started!</h1>
+          <p>Create your account</p>
+        </div>
+        <div class="form-input">
+          <form action="">
+            <p>Full Name*</p>
+            <input
+              type="text"
+              placeholder="Full Name"
+              name="Full Name"
+              id="full-name"
+              required
+            />
+            <p>Email*</p>
+            <input
+              type="email"
+              placeholder="Email"
+              name="Email"
+              id="email"
+              required
+            />
+            <p>Password*</p>
+            <input
+              type="password"
+              placeholder="Password"
+              name="Password"
+              id="password"
+              required
+            />
+            <p>Confirm Password*</p>
+            <input
+              type="password"
+              placeholder="Password"
+              name="Password"
+              id="password"
+              required
+            />
+            <p>Choose Role*</p>
+            <select name="role" id="role">
+              <option selected disabled>Choose Role</option>
+              <option value="">.......</option>
+              <option value="">.......</option>
+              <option value="">.......</option>
+            </select>
+            <p>Experience Level*</p>
+            <select name="experience" id="experience">
+              <option selected disabled>Experience Level</option>
+              <option value="">.......</option>
+              <option value="">.......</option>
+              <option value="">.......</option>
+            </select>
+            <p>Industry*</p>
+            <select name="industry" id="industry">
+              <option selected disabled>Industry</option>
+              <option value="">.......</option>
+              <option value="">.......</option>
+              <option value="">.......</option>
+            </select>
+            <input type="submit" value="Sign Up" id="submit" />
+          </form>
+          <!-- <div class="submit">
+                    <input type="submit" value="Sign Up">
+                </div> -->
+        </div>
+        <div class="signup-with">
+          <div class="already">
+            <p>Already have an account ? <a href="./LogIn.html">Sign In</a></p>
+            <br />
+            <br />
+            <p>
+              By signing up, you agree to our Terms of Use <br />
+              and Privacy policy
+            </p>
+            <br />
+
+            <h1>OR</h1>
+          </div>
+          <div class="sign-with">
+            <!-- <div>
+                        <button> <img src="./images/flat-color-icons_google.svg" alt="google logo"> <span>Sign up with Google</span></button>
+                    </div> -->
+            <div>
+              <button>
+                <i class="fa-brands fa-google"></i
+                ><a href="">Sign up with Google</a>
+              </button>
+            </div>
+            <div>
+              <button>
+                <i class="fa-brands fa-facebook"></i
+                ><a href="">Sign up with Facebook</a>
+              </button>
+            </div>
+            <div>
+              <button>
+                <i class="fa-brands fa-linkedin"></i
+                ><a href="">Sign up with LinkedIn</a>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
