coders name updated in forgot, login, and signup pages.

--- a/HTML/Forgot.html
+++ b/HTML/Forgot.html
@@ -19,6 +19,7 @@
     <title>Forgot Password</title>
   </head>
   <body>
+    <!-- code by Endework Abera -->
     <div class="container d-flex mt-5 mb-5 gap-5 w-100">
       <div class="left flex-item">
         <div class="image_wrapper">
@@ -46,7 +47,9 @@
         <div class="d-grid gap-2">
           <button class="btn btn-primary" type="button">Send Code</button>
         </div>
-        <p class="sub pt-3">Check your registered Email for a verification code.</p>
+        <p class="sub pt-3">
+          Check your registered Email for a verification code.
+        </p>
 
         <div class="mb-3">
           <label for="formGroupExampleInput" class="form-label sub"
