--- a/HTML/LogIn.html
+++ b/HTML/LogIn.html
@@ -27,6 +27,7 @@
 		<title>Login Page</title>
 	</head>
 	<body>
+		<!-- code by Purity Kamau -->
 		<section class="login-section w-100">
 			<div class="login-container d-flex justify-content-between">
 				<div class="login-image-wrapper">
