--- a/HTML/SignUp.html
+++ b/HTML/SignUp.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../CSS/signup.css" />
     <title>SignUp</title>
   </head>
+  <!-- code by Favour Ezera -->
   <body>
     <main class="signup">
       <div class="signup-img">
