--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
 </head>
 <body>
     <div class="hero" style="cursor: grab; padding: 5rem;">
-        <h1 style="text-align: center;">Welcome to AGLIYST page</h1>
+        <h1 style="text-align: center;">Welcome to AGLIYST Page</h1>
            <center><button style="cursor:pointer;"><a style="text-decoration: none;" href="./HTML/LogIn.html">Login</a></button></center>
     </div>
 
     
 </body>
+<style>
+    /* styles */
+    .hero{
+        width: 1132px;
+    }
+   .hero:hover{
+    background-color: aqua;
+    font-size: large;
+
+   }
+</style>
 </html>
