added media query

--- a/index.html
+++ b/index.html
@@ -23,5 +23,16 @@
     font-size: large;
 
    }
+   @media screen and (max-width: 700px) {
+    .hero{
+        width: 500px;
+    }
+    .hero:hover{
+    background-color:blueviolet;
+    font-size: medium;
+
+   }
+    
+    }
 </style>
 </html>
