new button added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="hero" style="cursor: grab; padding: 5rem;">
         <h1 style="text-align: center;">Welcome to AGLIYST Page</h1>
            <center><button style="cursor:pointer;"><a style="text-decoration: none;" href="./HTML/LogIn.html">Login</a></button></center>
+           <center><button style="cursor:pointer;"><a style="text-decoration: none;" href="./HTML/signup.html">SignUp</a></button></center>
     </div>
 
     
