--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="hero" style="cursor: grab; padding: 5rem;">
         <h1 style="text-align: center;">Welcome to AGLIYST Page</h1>
            <center><button style="cursor:pointer;"><a style="text-decoration: none;" href="./HTML/LogIn.html">Login</a></button></center>
-           <center><button style="cursor:pointer;"><a style="text-decoration: none;" href="./HTML/signup.html">SignUp</a></button></center>
+           <center><button class="signup" style="cursor:pointer;"><a style="text-decoration: none;" href="./HTML/signup.html">SignUp</a></button></center>
     </div>
 
     
@@ -18,6 +18,10 @@
     /* styles */
     .hero{
         width: 1132px;
+    }
+    .signup{
+        margin-top:10px;
+
     }
    .hero:hover{
     background-color: aqua;
