sign up and forgot page updated

--- a/HTML/Forgot.html
+++ b/HTML/Forgot.html
@@ -20,66 +20,72 @@
   </head>
   <body>
     <!-- code by Endework Abera -->
-    <div class="container d-flex mt-5 mb-5 gap-5 w-100">
+    <div class="container-fluid d-flex mt-4 mb-5 gap-5 w-100">
       <div class="left flex-item">
         <div class="image_wrapper">
-          <img " src="../Images/forgotpass.jpeg" alt="forgotpass image">
+          <img " src="../Images/New_signin_image.jpg" alt="forgotpass image">
         </div>
       </div>
-      <div class="right flex-item">
-        <div class="logo">
-          <img src="../Images/logo.png" alt="logo image" />
-        </div>
-        <p class="title">
-          Forgot <br />
-          Password?
-        </p>
-        <p class="text">
-          Enter the Email address <br />associated with your account
-        </p>
-        <!-- used bootstrap -->
-        <div class="mb-3">
-          <label for="formGroupExampleInput" class="form-label sub"
-            >Email</label
-          >
-          <input type="text" class="form-control" placeholder="Email" />
-        </div>
-        <div class="d-grid gap-2">
-          <button class="btn btn-primary" type="button">Send Code</button>
-        </div>
-        <p class="sub pt-3">
-          Check your registered Email for a verification code.
-        </p>
-
-        <div class="mb-3">
-          <label for="formGroupExampleInput" class="form-label sub"
-            >Verification Code*</label
-          >
-          <input
-            type="text"
-            class="form-control"
-            placeholder="verification Code"
-          />
-        </div>
-        <div class="mb-3">
-          <label for="formGroupExampleInput" class="form-label sub"
-            >Password*</label
-          >
-          <input type="text" class="form-control" placeholder="Password" />
-        </div>
-        <div class="mb-3">
-          <label for="formGroupExampleInput2" class="form-label sub"
-            >Confirm Password*</label
-          >
-          <input
-            type="text"
-            class="form-control"
-            placeholder="Confirm Password"
-          />
-        </div>
-        <div class="d-grid gap-2">
-          <button class="btn btn-primary" type="button">Save</button>
-        </div>
+      <div class="right flex-item pe-2">
+        <form action="">
+          <!-- <div class="logo">
+            <img src="../Images/logo.png" alt="logo image" />
+          </div> -->
+          <p class="title">
+            Forgot <br />
+            Password?
+          </p>
+          <p class="text">
+            Enter the Email address <br />associated with your account
+          </p>
+          <!-- used bootstrap -->
+          <div class="mb-3">
+            <label for="formGroupExampleInput" class="form-label sub"
+              >Email</label
+            >
+            <input
+              type="email"
+              class="form-control"
+              id="exampleFormControlInput1"
+              placeholder="name@example.com"
+            />
+          </div>
+          <div class="d-grid gap-2">
+            <button class="btn btn-primary" type="submit">Send Code</button>
+          </div>
+          <p class="sub pt-3">
+            Check your registered Email for a verification code.
+          </p>
+          <div class="mb-3">
+            <label for="formGroupExampleInput" class="form-label sub"
+              >Verification Code*</label
+            >
+            <input
+              type="text"
+              class="form-control"
+              placeholder="verification Code"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="formGroupExampleInput" class="form-label sub"
+              >Password*</label
+            >
+            <input type="text" class="form-control" placeholder="Password" />
+          </div>
+          <div class="mb-3">
+            <label for="formGroupExampleInput2" class="form-label sub"
+              >Confirm Password*</label
+            >
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Confirm Password"
+            />
+          </div>
+          <div class="d-grid gap-2">
+            <button class="btn btn-primary" type="submit">Save</button>
+          </div>
+        </form>
       </div>
     </div>
 
