--- a/HTML/SignUp.html
+++ b/HTML/SignUp.html
@@ -11,17 +11,16 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="../CSS/signup.css" />
-    <title>SignUp</title>
+    <title>Sign Up</title>
   </head>
-  <!-- code by Favour Ezera -->
   <body>
-    <main class="signup">
+    <header class="signup">
       <div class="signup-img">
-        <img src="../images/Frame 46.jpg" alt="frame image" />
+        <img src="../Images/New_signin_image.jpg" alt="profile image" />
       </div>
       <div class="form">
         <div class="get">
-          <img src="../images/Agilyst Logo5 3- new.jpg" alt="Agilyst logo" />
+          <!-- <img src="./images/Agilyst Logo5 3- new.jpg" alt="Agilyst logo"> -->
           <h1>Get Started!</h1>
           <p>Create your account</p>
         </div>
@@ -82,48 +81,44 @@
             </select>
             <input type="submit" value="Sign Up" id="submit" />
           </form>
-          <!-- <div class="submit">
-                    <input type="submit" value="Sign Up">
-                </div> -->
         </div>
         <div class="signup-with">
           <div class="already">
-            <p>Already have an account ? <a href="./LogIn.html">Sign In</a></p>
+            <div class="already-1">
+              <p>Already have an account ? <a href="">Sign In</a></p>
+              <br />
+              <p>
+                By signing up, you agree to our Terms of Use and <br />
+                Privacy policy
+              </p>
+            </div>
             <br />
             <br />
-            <p>
-              By signing up, you agree to our Terms of Use <br />
-              and Privacy policy
-            </p>
-            <br />
-
-            <h1>OR</h1>
+            <div id="hr-line"><span>or sign with</span></div>
           </div>
-          <div class="sign-with">
-            <!-- <div>
-                        <button> <img src="./images/flat-color-icons_google.svg" alt="google logo"> <span>Sign up with Google</span></button>
-                    </div> -->
-            <div>
-              <button>
-                <i class="fa-brands fa-google"></i
-                ><a href="">Sign up with Google</a>
-              </button>
-            </div>
-            <div>
-              <button>
-                <i class="fa-brands fa-facebook"></i
-                ><a href="">Sign up with Facebook</a>
-              </button>
-            </div>
-            <div>
-              <button>
-                <i class="fa-brands fa-linkedin"></i
-                ><a href="">Sign up with LinkedIn</a>
-              </button>
-            </div>
+        </div>
+        <div class="sign-with">
+          <div>
+            <button>
+              <a href=""
+                ><img
+                  src="./images/flat-color-icons_google-new.png"
+                  alt="google"
+              /></a>
+            </button>
+          </div>
+          <div>
+            <button>
+              <a href=""><i class="fa-brands fa-facebook"></i></a>
+            </button>
+          </div>
+          <div>
+            <button>
+              <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            </button>
           </div>
         </div>
       </div>
-    </main>
+    </header>
   </body>
 </html>
