--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <style>
     /* styles */
     .hero{
-        width: 1132px;
+        width: 100%;
     }
     .signup{
         margin-top:10px;
