both signup and forgot pages got updated

--- a/HTML/Forgot.html
+++ b/HTML/Forgot.html
@@ -48,6 +48,7 @@
               class="form-control"
               id="exampleFormControlInput1"
               placeholder="name@example.com"
+              required
             />
           </div>
           <div class="d-grid gap-2">
@@ -64,13 +65,14 @@
               type="text"
               class="form-control"
               placeholder="verification Code"
+              required
             />
           </div>
           <div class="mb-3">
             <label for="formGroupExampleInput" class="form-label sub"
               >Password*</label
             >
-            <input type="text" class="form-control" placeholder="Password" />
+            <input type="text" class="form-control" placeholder="Password" required />
           </div>
           <div class="mb-3">
             <label for="formGroupExampleInput2" class="form-label sub"
@@ -80,6 +82,7 @@
               type="text"
               class="form-control"
               placeholder="Confirm Password"
+              required
             />
           </div>
           <div class="d-grid gap-2">
