--- a/HTML/SignUp.html
+++ b/HTML/SignUp.html
@@ -102,7 +102,7 @@
             <button>
               <a href=""
                 ><img
-                  src="./images/flat-color-icons_google-new.png"
+                  src="../Images/flat-color-icons_google.jpg"
                   alt="google"
               /></a>
             </button>
