sign in link added

--- a/HTML/SignUp.html
+++ b/HTML/SignUp.html
@@ -85,7 +85,7 @@
         <div class="signup-with">
           <div class="already">
             <div class="already-1">
-              <p>Already have an account ? <a href="">Sign In</a></p>
+              <p>Already have an account ? <a href="./LogIn.html">Sign In</a></p>
               <br />
               <p>
                 By signing up, you agree to our Terms of Use and <br />
