--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="hero" style="cursor: grab; padding: 5rem;">
-        <h1 style="text-align: center;">Welcome to AGLIYST Page</h1>
+        <h1 style="text-align: center;">Welcome to AGILYST Page</h1>
            <center><button style="cursor:pointer;"><a style="text-decoration: none;" href="./HTML/LogIn.html">Login</a></button></center>
            <center><button class="signup" style="cursor:pointer;"><a style="text-decoration: none;" href="./HTML/signup.html">SignUp</a></button></center>
     </div>
