--- a/HTML/Forgot.html
+++ b/HTML/Forgot.html
@@ -26,7 +26,7 @@
           <img " src="../Images/New_signin_image.jpg" alt="forgotpass image">
         </div>
       </div>
-      <div class="right flex-item pe-2">
+      <div class="right flex-item">
         <form action="">
           <!-- <div class="logo">
             <img src="../Images/logo.png" alt="logo image" />
@@ -72,7 +72,12 @@
             <label for="formGroupExampleInput" class="form-label sub"
               >Password*</label
             >
-            <input type="text" class="form-control" placeholder="Password" required />
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Password"
+              required
+            />
           </div>
           <div class="mb-3">
             <label for="formGroupExampleInput2" class="form-label sub"
