signup successful page added

--- a/HTML/SignUp.html
+++ b/HTML/SignUp.html
@@ -25,7 +25,7 @@
           <p>Create your account</p>
         </div>
         <div class="form-input">
-          <form action="">
+          <form action="./signup_successful.html">
             <p>Full Name*</p>
             <input
               type="text"
