--- a/HTML/SignUp.html
+++ b/HTML/SignUp.html
@@ -10,6 +10,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../CSS/signup.css" />
     <title>Sign Up</title>
   </head>
@@ -25,7 +31,7 @@
           <p>Create your account</p>
         </div>
         <div class="form-input">
-          <form action="./signup_successful.html">
+          <form action="">
             <p>Full Name*</p>
             <input
               type="text"
@@ -79,13 +85,26 @@
               <option value="">.......</option>
               <option value="">.......</option>
             </select>
-            <input type="submit" value="Sign Up" id="submit" />
+
+            <!-- <input type="submit"  value="Sign Up" id="submit" /> -->
+
+            <div class="d-grid gap-2 button">
+              <button
+                class="btn btn-primary"
+                type="submit"
+                onclick="openPopup()"
+              >
+                SignuP
+              </button>
+            </div>
           </form>
         </div>
         <div class="signup-with">
           <div class="already">
             <div class="already-1">
-              <p>Already have an account ? <a href="./LogIn.html">Sign In</a></p>
+              <p>
+                Already have an account ? <a href="./LogIn.html">Sign In</a>
+              </p>
               <br />
               <p>
                 By signing up, you agree to our Terms of Use and <br />
@@ -101,9 +120,7 @@
           <div>
             <button>
               <a href=""
-                ><img
-                  src="../Images/flat-color-icons_google.jpg"
-                  alt="google"
+                ><img src="../Images/flat-color-icons_google.jpg" alt="google"
               /></a>
             </button>
           </div>
@@ -120,5 +137,64 @@
         </div>
       </div>
     </header>
+
+    <!-- signup successfull popup page -->
+    <style>
+      .popup {
+        width: 400px;
+        background: #fff;
+        position: absolute;
+        top: 0%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0.1);
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        visibility: hidden;
+        transition: transform 0.4s, top 0.4s;
+      }
+
+      .open-popup {
+        visibility: visible;
+        top: 50%;
+        transform: translate(-50%, -50%) scale(1);
+      }
+      .popup i {
+        color: blue;
+        font-size: 3rem;
+      }
+      .popup button {
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+      }
+    </style>
+    <div class="popup" id="popup">
+      <i class="fa-solid fa-circle-check"></i>
+      <h4>All Set</h4>
+      <h5>Sign Up Sucessful!</h5>
+      <a href="../HTML/LogIn.html"
+        ><button
+          type="button"
+          class="btn btn-primary btn-large"
+          onclick="closePopup()"
+        >
+          Login
+        </button></a
+      >
+    </div>
+    <script>
+      let popup = document.getElementById("popup");
+      function openPopup() {
+        popup.classList.add("open-popup");
+      }
+      function closePopup() {
+        popup.classList.reomove("open-popup");
+      }
+    </script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous">
+    </script>
   </body>
 </html>
