corrected the signup file and login file

--- a/HTML/Forgot.html
+++ b/HTML/Forgot.html
@@ -23,7 +23,7 @@
     <div class="container d-flex mt-5 mb-5 gap-5 w-100">
       <div class="left flex-item">
         <div class="image_wrapper">
-          <img " src="../Images/forgotpass.jpeg" alt="forgotpass image">
+          <img src="../Images/forgotpass.jpeg" alt="forgotpass image">
         </div>
       </div>
       <div class="right flex-item">
