--- a/HTML/LogIn.html
+++ b/HTML/LogIn.html
@@ -98,12 +98,12 @@
 					</div>
 					<div class="login-btn-wrapper d-flex justify-content-between">
 							<button class="btn border border-rounded">
-								<a href="https://accounts.google.com/o/oauth2/v2/auth?scope=email&redirect_uri=YOUR_REDIRECT_URI&response_type=code&client_id=YOUR_CLIENT_ID" class="border">
+								<a href="https://accounts.google.com/o/oauth2/v2/auth?scope=email&redirect_uri=YOUR_REDIRECT_URI&response_type=code&client_id=YOUR_CLIENT_ID" class="mx-2">
 									<img src="../Images/icons-google.svg" alt="">
 								</a>
 							</button>
 						<button class="btn border border-rounded ">
-							<a href="https://www.facebook.com/v2.8/dialog/oauth?client_id=YOUR_CLIENT_ID&redirect_uri=YOUR_REDIRECT_URI&response_type=code&scope=email" class="text-black ms-2">
+							<a href="https://www.facebook.com/v2.8/dialog/oauth?client_id=YOUR_CLIENT_ID&redirect_uri=YOUR_REDIRECT_URI&response_type=code&scope=email" class="mx-2">
                                 <img
 								src="../Images/icons-facebook.svg"
 								alt=""
@@ -111,7 +111,7 @@
 							</a>
 						</button>
 						<button class="btn border border-rounded ">
-							<a href="https://www.linkedin.com/oauth/v2/authorization?response_type=code&client_id=YOUR_CLIENT_ID&redirect_uri=YOUR_REDIRECT_URI&scope=r_liteprofile%20r_emailaddress" class="text-black ms-2">
+							<a href="https://www.linkedin.com/oauth/v2/authorization?response_type=code&client_id=YOUR_CLIENT_ID&redirect_uri=YOUR_REDIRECT_URI&scope=r_liteprofile%20r_emailaddress" class="mx-2">
                                 <img
 								src="../Images/icons-linkedin.svg"
 								alt=""
