--- a/HTML/SignUp.html
+++ b/HTML/SignUp.html
@@ -1,200 +1,89 @@
+
+
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../CSS/signup.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />" />">
+    <link rel="stylesheet" href="../CSS/signup.css">
     <title>Sign Up</title>
-  </head>
-  <body>
+</head>
+<body>
     <header class="signup">
-      <div class="signup-img">
-        <img src="../Images/New_signin_image.jpg" alt="profile image" />
-      </div>
-      <div class="form">
+        <div class="signup-img">
+            <img src="../Images/New_signin_image.jpg" alt="profile image">
+        </div>
+        <div class="form">
         <div class="get">
-          <!-- <img src="./images/Agilyst Logo5 3- new.jpg" alt="Agilyst logo"> -->
-          <h1>Get Started!</h1>
-          <p>Create your account</p>
+            <!-- <img src="./images/Agilyst Logo5 3- new.jpg" alt="Agilyst logo"> -->
+            <h1>Get Started!</h1>
+            <p>Create your account</p>
         </div>
         <div class="form-input">
-          <form action="">
-            <p>Full Name*</p>
-            <input
-              type="text"
-              placeholder="Full Name"
-              name="Full Name"
-              id="full-name"
-              required
-            />
-            <p>Email*</p>
-            <input
-              type="email"
-              placeholder="Email"
-              name="Email"
-              id="email"
-              required
-            />
-            <p>Password*</p>
-            <input
-              type="password"
-              placeholder="Password"
-              name="Password"
-              id="password"
-              required
-            />
-            <p>Confirm Password*</p>
-            <input
-              type="password"
-              placeholder="Password"
-              name="Password"
-              id="password"
-              required
-            />
-            <p>Choose Role*</p>
-            <select name="role" id="role">
-              <option selected disabled>Choose Role</option>
-              <option value="">.......</option>
-              <option value="">.......</option>
-              <option value="">.......</option>
-            </select>
-            <p>Experience Level*</p>
-            <select name="experience" id="experience">
-              <option selected disabled>Experience Level</option>
-              <option value="">.......</option>
-              <option value="">.......</option>
-              <option value="">.......</option>
-            </select>
-            <p>Industry*</p>
-            <select name="industry" id="industry">
-              <option selected disabled>Industry</option>
-              <option value="">.......</option>
-              <option value="">.......</option>
-              <option value="">.......</option>
-            </select>
-
-            <!-- <input type="submit"  value="Sign Up" id="submit" /> -->
-
-            <div class="d-grid gap-2 button">
-              <button
-                class="btn btn-primary"
-                type="submit"
-                onclick="openPopup()"
-              >
-                SignuP
-              </button>
+            <form action="./LogIn.html">
+                <p>Full Name*</p>
+                <input type="text" placeholder="Full Name" name="Full Name" id="full-name" required>
+                <p>Email*</p>
+                <input type="email" placeholder="Email" name="Email" id="email" required>
+                <p>Password*</p>
+                <input type="password" placeholder="Password" name="Password" id="password" required>
+                <p>Confirm Password*</p>
+                <input type="password" placeholder="Password" name="Password" id="password" required>
+                <p>Choose Role*</p>
+                <select name="role" id="role">
+                    <option selected disabled>Choose Role</option>
+                    <option value="">.......</option>
+                    <option value="">.......</option>
+                    <option value="">.......</option>
+                </select>
+                <p>Experience Level*</p>
+                <select name="experience" id="experience">
+                    <option selected disabled>Experience Level</option>
+                    <option value="">.......</option>
+                    <option value="">.......</option>
+                    <option value="">.......</option>
+                </select>
+                <p>Industry*</p>
+                <select name="industry" id="industry">
+                    <option selected disabled>Industry</option>
+                    <option value="">.......</option>
+                    <option value="">.......</option>
+                    <option value="">.......</option>
+                </select>
+                <input type="submit" value="Sign Up" id="submit">
+            </form>
+        </div>
+            <div class="signup-with">
+                <div class="already">
+                    <div class="already-1">
+                        <p>
+                            Already have an account ? <a href="./LogIn.html">Sign In</a>
+                        </p>
+                        <br>
+                        <p>By signing up, you agree to our Terms of Use and <br>
+                             Privacy policy</p>
+                    </div>
+                        <br>
+                        <br> 
+                        <div id="hr-line"><span>or sign with</span></div>
+                </div>
+            </div>    
+            <div class="sign-with">
+                <div>
+                    <button><a href=""><img src="../Images/flat-color-icons_google.jpg" alt="google"></a></button>
+                </div>
+                <div>
+                    <button><a href=""><i class="fa-brands fa-facebook"></i></a></button>
+                </div>
+                <div>
+                    <button><a href=""><i class="fa-brands fa-linkedin"></i></a></button>
+                </div>
             </div>
-          </form>
         </div>
-        <div class="signup-with">
-          <div class="already">
-            <div class="already-1">
-              <p>
-                Already have an account ? <a href="./LogIn.html">Sign In</a>
-              </p>
-              <br />
-              <p>
-                By signing up, you agree to our Terms of Use and <br />
-                Privacy policy
-              </p>
-            </div>
-            <br />
-            <br />
-            <div id="hr-line"><span>or sign with</span></div>
-          </div>
-        </div>
-        <div class="sign-with">
-          <div>
-            <button>
-              <a href=""
-                ><img src="../Images/flat-color-icons_google.jpg" alt="google"
-              /></a>
-            </button>
-          </div>
-          <div>
-            <button>
-              <a href=""><i class="fa-brands fa-facebook"></i></a>
-            </button>
-          </div>
-          <div>
-            <button>
-              <a href=""><i class="fa-brands fa-linkedin"></i></a>
-            </button>
-          </div>
-        </div>
-      </div>
     </header>
-
-    <!-- signup successfull popup page -->
-    <style>
-      .popup {
-        width: 400px;
-        background: #fff;
-        position: absolute;
-        top: 0%;
-        left: 50%;
-        transform: translate(-50%, -50%) scale(0.1);
-        text-align: center;
-        padding: 0 30px 30px;
-        color: #333;
-        visibility: hidden;
-        transition: transform 0.4s, top 0.4s;
-      }
-
-      .open-popup {
-        visibility: visible;
-        top: 50%;
-        transform: translate(-50%, -50%) scale(1);
-      }
-      .popup i {
-        color: blue;
-        font-size: 3rem;
-      }
-      .popup button {
-        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-      }
-    </style>
-    <div class="popup" id="popup">
-      <i class="fa-solid fa-circle-check"></i>
-      <h4>All Set</h4>
-      <h5>Sign Up Sucessful!</h5>
-      <a href="../HTML/LogIn.html"
-        ><button
-          type="button"
-          class="btn btn-primary btn-large"
-          onclick="closePopup()"
-        >
-          Login
-        </button></a
-      >
-    </div>
-    <script>
-      let popup = document.getElementById("popup");
-      function openPopup() {
-        popup.classList.add("open-popup");
-      }
-      function closePopup() {
-        popup.classList.reomove("open-popup");
-      }
-    </script>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous">
-    </script>
-  </body>
+    
+</body>
+    
 </html>
