index and forgot media query updated

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    }
    @media screen and (max-width: 700px) {
     .hero{
-        width: 500px;
+        width: 100%;
     }
     .hero:hover{
     background-color:blueviolet;
