--- a/HTML/Forgot.html
+++ b/HTML/Forgot.html
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="right flex-item">
-        <form action="">
+        <form action="" class="me-5 mt-5 pe-4">
           <!-- <div class="logo">
             <img src="../Images/logo.png" alt="logo image" />
           </div> -->
