sign up, login page updated and contact, about and payment pages are added

--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -1,11 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <link rel="stylesheet" href="../CSS/AboutUs.css" />
+    <title>AboutUs</title>
+  </head>
+  <body>
+    <main>
+      <nav>
+        <div><img src="../Images/BRAND LOGO.png" alt="Agyist Logo" /></div>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Find Mentors</a></li>
+          <li><a href="">Services</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+
+        <ul>
+          <li><a href="">Help</a></li>
+          <li><img src="../Images/mdi_account.png" alt="" /></li>
+          <li><a href="">Account</a></li>
+        </ul>
+      </nav>
+
+      <section class="sec1">
+        <div class="hero">
+          <h2>Unlocking your Agile Potential</h2>
+          <p>
+            Agilyst provides a comprehensive and collaborative platform that
+            aims to connect users with experienced agile mentors and coaches
+            that provide guidance, support and expertise to assist them in
+            navigating the challenges and complexities of agile practices.
+          </p>
+        </div>
+      </section>
+
+      <section class="sec2">
+        <div class="section2">
+          <h2>Our Vision</h2>
+          <p>
+            We envision a world in which agile methodologies are successfully
+            adopted and organisational agility is achieved.
+          </p>
+        </div>
+      </section>
+
+      <section class="sec3">
+        <div class="imgdiv">
+          <img src="../Images/Group 36.png" alt="" />
+        </div>
+      </section>
+
+      <section class="sec4">
+        <div class="section4">
+          <h2>Our Mission</h2>
+          <p>
+            To facilitate the growth and development of individuals and
+            organisations in successfully adopting and implementing agile
+            methodologies.
+          </p>
+        </div>
+      </section>
+
+      <section class="sec5">
+        <div class="section5">
+          <h2>Our Values</h2>
+          <img
+            style="margin-inline: 30%; margin-bottom: 6rem"
+            src="../Images/Line 22.png"
+            alt=""
+          />
+          <div class="contdiv">
+            <div class="indv-div">
+              <div class="text-div">
+                <h4>COMMITMENT</h4>
+                <p>
+                  It is important to keep our word and not make promises we
+                  cannot keep. <br />We are focused on delivering on our
+                  pledges. <br />We are dedicated not only to a goal but to a
+                  purpose.
+                </p>
+              </div>
+              <div><img src="../Images/Group 40.png" alt="" /></div>
+              <div class="img-div">
+                <img src="../Images/material-symbols_hexagon.png" alt="" />
+              </div>
+            </div>
+
+            <div class="indv-div">
+              <div class="img-div2">
+                <img src="../Images/material-symbols_hexagon (1).png" alt="" />
+              </div>
+              <div><img src="../Images/Group 40.png" alt="" /></div>
+              <div class="text-div">
+                <h4>HUMILITY</h4>
+                <p>
+                  We pursue self-awareness, and possess a willingness to learn
+                  and grow. We value self-reflection and self-improvement and
+                  endeavor to be open-minded and respectful.
+                </p>
+              </div>
+            </div>
+
+            <div class="indv-div">
+              <div class="text-div">
+                <h4>INTEGRITY</h4>
+                <p>
+                  We believe one should be driven by principles, strive for
+                  honesty and honour. We believe in standing firm in our beliefs
+                  and not being easily swayed. We aspire to be good and do good.
+                </p>
+              </div>
+              <div><img src="../Images/Group 40.png" alt="" /></div>
+              <div class="img-div">
+                <img src="../Images/material-symbols_hexagon.png" alt="" />
+              </div>
+            </div>
+
+            <div class="indv-div">
+              <div class="img-div2">
+                <img src="../Images/material-symbols_hexagon (1).png" alt="" />
+              </div>
+              <div><img src="../Images/Group 40.png" alt="" /></div>
+              <div class="text-div">
+                <h4>EMPATHY</h4>
+                <p>
+                  We value compassion and kindness. We seek awareness and
+                  understanding of people’s feelings, thoughts and experiences.
+                </p>
+              </div>
+            </div>
+
+            <div class="indv-div">
+              <div class="text-div">
+                <h4>ADAPTABILITY</h4>
+                <p>
+                  We are flexible and embrace change. We endeavor to be
+                  proactive rather than reactive. We approach change as an
+                  opportunity rather than an obstacle.
+                </p>
+              </div>
+              <div><img src="../Images/Group 40.png" alt="" /></div>
+              <div class="img-div">
+                <img src="../Images/material-symbols_hexagon.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div class="line"><img src="../Images/Line 23.png" alt="" /></div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
