--- a/HTML/SignUp.html
+++ b/HTML/SignUp.html
@@ -155,7 +155,7 @@
 						<button
 							class="btn signup-btn w-100 text-white py-2 fs-5" 
 							type="submit"
-							onclick="window.location.href=''"
+							onclick="window.location.href='signup-successfull.html'"
 						>
 							Sign up
 						</button>
