--- a/HTML/Payment.html
+++ b/HTML/Payment.html
@@ -1,11 +1,258 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<link
+			rel="shortcut icon"
+			href=""
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+		/>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+			crossorigin="anonymous"
+		/>
+		<link
+			rel="stylesheet"
+			href="../CSS/Payment.css"
+		/>
+		<title>Payment Page</title>
+	</head>
+	<body>
+		<header>
+			<nav class="navbar navbar-expand-lg fixed-top ps-5">
+				<div class="container-fluid d-flex justify-content-evenly">
+					<a
+						class="navbar-brand"
+						href="#"
+					>
+						<img
+							src="../Images/Agilyst Logo5 3.jpg"
+							alt=""
+							class=""
+						/>
+					</a>
+					<button
+						class="navbar-toggler"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#navbarTogglerDemo02"
+						aria-controls="navbarTogglerDemo02"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					>
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div
+						class="collapse navbar-collapse"
+						id="navbarTogglerDemo02"
+					>
+						<ul class="navbar-nav mx-auto mb-2 mb-lg-0 gap-5">
+							<li class="nav-item">
+								<a
+									class="nav-link active bg-transparent"
+									id="first-link"
+									aria-current="page"
+									href="#"
+									>Home</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link"
+									id="nav-link2"
+									href="#"
+									>Find Mentors</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link"
+									id="nav-link2"
+									href="#"
+									>Services</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link"
+									id="nav-link3"
+									href="./html/about.html"
+									>About Us</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link"
+									id="nav-link4"
+									href="#"
+									>contact</a
+								>
+							</li>
+						</ul>
+						<ul class="navbar-nav sec-ul mx-auto mb-2 mb-lg-0 gap-5">
+							<li class="nav-item">
+								<a
+									class="nav-link"
+									id=""
+									href="#"
+									>Help</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link"
+									id=""
+									href="#"
+								>
+									<img
+										src="../Images/mdi-account.svg"
+										alt=""
+										class="w-25"
+									/>
+									Account</a
+								>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+			<div class="payment-hero"></div>
+		</header>
+		<main>
+			<section class="payment-sec1 mt-5">
+				<div class="payment-container">
+					<div class="btn-div d-flex justify-content-between mx-5 my-5">
+						<button class="btn btn-large border rounded pe-5 py-2 ps-2">
+							<a
+								href=""
+								class="pe-5 text-black"
+							>
+								<img
+									src="../Images/credit-card.svg"
+									alt=""
+								/>
+								Credit Card</a
+							>
+						</button>
+						<button class="btn border rounded pe-5 py-2 ps-2">
+							<a
+								href=""
+								class="pe-5 text-black"
+							>
+								<img
+									src="../Images/paypal.svg"
+									alt=""
+								/>
+								Paypal</a
+							>
+						</button>
+						<button class="btn border rounded pe-5 py-2 ps-2">
+							<a
+								href=""
+								class="pe-5 text-black"
+							>
+								<img
+									src="../Images/net-banking.svg"
+									alt=""
+								/>
+								Net Banking</a
+							>
+						</button>
+					</div>
+					<form
+						action=""
+						method="post"
+					>
+						<div class="form-div mb-4">
+							<p class="fw-medium mb-3">Card Owner Name*</p>
+							<input
+								type="name"
+								name="name"
+								id="name"
+								placeholder="Card Owner Name"
+								class="border rounded w-100 py-2 ps-4"
+								required
+							/>
+						</div>
+						<div class="form-div mb-4">
+							<p class="fw-medium mb-3">Credit or Debit Card Number*</p>
+							<div class="card-number-wrapper d-flex">
+								<input
+									type="number"
+									name="number"
+									id="number"
+									placeholder="Valid Card Number"
+									class="border rounded w-100 py-2 ps-4"
+								/>
+								<div class="card-wrapper d-flex flex-md-nowrap ms-3 gap-2">
+									<img
+										src="../Images/paypal.svg"
+										alt=""
+									/><img
+										src="../Images/paypal.svg"
+										alt=""
+									/><img
+										src="../Images/paypal.svg"
+										alt=""
+									/>
+								</div>
+							</div>
+						</div>
+						<div class="form-div d-flex mb-4 justify-content-between w-100">
+							<div class="date-wrapper">
+								<p class="fw-medium mb-3">Expiration Date*</p>
+								<div class="input-wrapper d-flex gap-5 w-100">
+									<input
+										type="month"
+										name="month"
+										id="date"
+										placeholder="MM"
+										class="border rounded w-100 py-2 ps-5 px-5 pe-5 me-5"
+									/>
+									<input
+										type="number"
+										name="date"
+										id="date"
+										placeholder="YY"
+										class="border rounded w-100 py-2 ps-5 px-5"
+									/>
+								</div>
+							</div>
+							<div class="cvv-wrapper">
+								<p class="fw-medium mb-3">
+									Cvv
+									<span class="border text-white rounded-circle bg-primary px-2"
+										>?</span
+									>
+								</p>
+								<input
+									type="text"
+									name="text"
+									id=""
+									class="border rounded w-100 py-2 ps-4 px-5 "
+								/>
+							</div>
+						</div>
+						<div class="d-grid gap-2 col-6 mx-auto my-5">
+							<button
+								class="btn btn-primary border border-rounded py-2"
+								type="button"
+							>
+								Confirm Payment
+							</button>
+						</div>
+					</form>
+				</div>
+			</section>
+		</main>
+	</body>
 </html>
