href of payment updated

--- a/HTML/Payment.html
+++ b/HTML/Payment.html
@@ -85,7 +85,7 @@
 								<a
 									class="nav-link"
 									id="nav-link3"
-									href="./html/about.html"
+									href="./html/AboutUs.html"
 									>About Us</a
 								>
 							</li>
