about and contact href links updated

--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -22,8 +22,8 @@
           <li><a href="">Home</a></li>
           <li><a href="">Find Mentors</a></li>
           <li><a href="">Services</a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="../HTML/contact.html">Contact</a></li>
         </ul>
 
         <ul>
