--- a/HTML/Contact.html
+++ b/HTML/Contact.html
@@ -15,8 +15,8 @@
                 <li><a href="">Home</a></li>
                 <li><a href="">Find Mentors</a></li>
                 <li><a href="">Services</a></li>
-                <li><a href="">About Us</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="../HTML/AboutUs.html">About Us</a></li>
+                <li><a href="#">Contact</a></li>
                 <div class="help">
                     <li><a href="">Help</a></li>
                     <li><a href=""><i class="fa-solid fa-user"></i>Account</a></li>
