--- a/HTML/Mentor_booking.html
+++ b/HTML/Mentor_booking.html
@@ -100,7 +100,7 @@
              <div class="nav-cont">
               <a href=""><img src="./Images/Vector.svg" alt=""></a>
               <a href=""><img src="./Images/ci_bell-notification (1).svg" alt=""></a>
-              <div class="img-div"><img src="./Images/nav user image.jpeg" alt=""></div>
+              <div class="img-div"><img src="../Images/nav_user_image.jpeg" alt=""></div>
               
 
               <div class="dropdown" >
