--- a/HTML/Mentee-m-search-results.html
+++ b/HTML/Mentee-m-search-results.html
@@ -172,7 +172,7 @@
 								alt=""
 							/>
 							<a
-								href=""
+								href="connections.html"
 								class="text-black ms-2"
 								>Connections</a
 							>
@@ -351,5 +351,6 @@
 				</div>
 			</section>
 		</main>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 	</body>
 </html>
