--- a/index.html
+++ b/index.html
@@ -3,52 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/index.css/header.css">
     <title>Home</title>
 </head>
 <body>
     <header>
-      <nav class="navbar navbar-expand-lg fixed-top py-2 px-5 mx-auto">
-        <div class="container-fluid gap-md-5">
-            <a class="navbar-brand" href="#">
-                <img src="./Images/dashboard-logo.png" alt="">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-5">
-                    <li class="nav-item">
-                        <a class="nav-link active bg-transparent" id="first-link" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" id="nav-link2" href="">About us</a>
-                  </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle fs-6" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="nav-link1">
-                            Services
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item text-black" href="./html/content.html">Mentor</a></li>
-                            <li><a class="dropdown-item text-black" href="./html/download.html">Mentee</a></li>
-                        </ul>
-                    </li>  
-                    
-                    <li class="nav-item">
-                        <a class="nav-link" id="nav-link3" href="./html/about.html">Contact Us</a>
-                    </li>
-                </ul>
-                <div class="btn-div d-flex gap-4">
-                    <button class="btn btn-1 border border-rounded px-5 py-2" type="submit" onclick="window.location.href='../html/LogIn.html'">Login</button>
-                    <button class="btn btn-2 btn-outline-light px-5 py-2 me-5" type="submit" onclick="window.location.href='../html/SignUp.html'">Sign Up</button>
-                </div>
-            </div>
+      <nav class="navbar">
+        <div class="navbar-brand">
+            <img src="./Images/dashboard-logo.png" alt="">
         </div>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li class="dropdown">
+                <div class="dropdown-link">
+                  <a href="#">Service</a>
+                  <img src="./Images/symbols-arrow-drop-down.svg" alt="" class="dropdown-arrow">
+                </div>
+                <ul class="dropdown-menu" style="display: none;">
+                    <li><a href="#">Mentor</a></li>
+                    <li><a href="#">Mentee</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Contact Us</a></li>
+        </ul>
+        <div class="btn-div">
+          <button class="btn" id="btn-1" type="submit" onclick="window.location.href='./html/LogIn.html'">Login</button>
+          <button class="btn" id="btn-2" type="submit" onclick="window.location.href='./html/SignUp.html'">Sign Up</button>
+      </div>
     </nav>
     </header>
 
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
